website/versioned_docs/version-0.0.4/api/cloud/cloud.postgres.md
---
id: version-0.0.4-cloud.postgres
title: postgres namespace
hide_title: true
original_id: cloud.postgres
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Cloud API Overview](overview) &gt; [@adpt/cloud](./cloud.md) &gt; [postgres](./cloud.postgres.md)

## postgres namespace

The [Postgres](https://www.postgresql.org) library for Adapt.

<b>Signature:</b>

```typescript
export * from "./Postgres";
export * from "./TestPostgres";
export * from "./PreloadedPostgresImage";
//# sourceMappingURL=index.d.ts.map
```

## Functions

|  Function | Description |
|  --- | --- |
|  [Postgres()](./cloud.postgres.postgres.md) | An abstract component representing a Postgres database within a Postgres server or service. |
|  [PreloadedPostgresImage(props)](./cloud.postgres.preloadedpostgresimage.md) | Creates a throw-away [Postgres](https://www.postgresql.org) database with preloaded data. |
|  [TestPostgres(props)](./cloud.postgres.testpostgres.md) | A component suitable for creating test scenarios that creates a simple, temporary Postgres database that loads test data from a .sql file and which implements the abstract [postgres.Postgres()](./cloud.postgres.postgres.md) interface. |

## Interfaces

|  Interface | Description |
|  --- | --- |
|  [PreloadedPostgresImageProps](./cloud.postgres.preloadedpostgresimageprops.md) | Props for [postgres.PreloadedPostgresImage()](./cloud.postgres.preloadedpostgresimage.md) |
