website/versioned_docs/version-0.1.0/api/cloud/cloud.postgres.md
---
id: "version-0.1.0-cloud.postgres"
title: "postgres namespace"
hide_title: true
original_id: "cloud.postgres"
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Cloud API Overview](overview) &gt; [@adpt/cloud](./cloud.md) &gt; [postgres](./cloud.postgres.md)

## postgres namespace

The [Postgres](https://www.postgresql.org) library for Adapt.

## Functions

|  Function | Description |
|  --- | --- |
|  [default(props)](./cloud.postgres.default.md) | Component that represents an external provider of a Postgres database |
|  [Postgres()](./cloud.postgres.postgres.md) | An abstract component representing a Postgres database within a Postgres server or service. |
|  [PostgresProvider(props)](./cloud.postgres.postgresprovider.md) | Component that represents an external provider of a Postgres database |
|  [PreloadedPostgresImage(props)](./cloud.postgres.preloadedpostgresimage.md) | Creates a throw-away [Postgres](https://www.postgresql.org) database with preloaded data. |
|  [TestPostgres(props)](./cloud.postgres.testpostgres.md) | A component suitable for creating test scenarios that creates a simple, temporary Postgres database that loads test data from a .sql file and which implements the abstract [postgres.Postgres()](./cloud.postgres.postgres.md) interface. |

## Interfaces

|  Interface | Description |
|  --- | --- |
|  [PostgresProviderProps](./cloud.postgres.postgresproviderprops.md) | Props for the [postgres.PostgresProvider()](./cloud.postgres.postgresprovider.md) component |
|  [PreloadedPostgresImageProps](./cloud.postgres.preloadedpostgresimageprops.md) | Props for [postgres.PreloadedPostgresImage()](./cloud.postgres.preloadedpostgresimage.md) |
|  [TestPostgresProps](./cloud.postgres.testpostgresprops.md) | Props for the [postgres.TestPostgres()](./cloud.postgres.testpostgres.md) component |
